RESOLVED FIXED129123
We need something like WKPageUIClient in the Obj-C API
https://bugs.webkit.org/show_bug.cgi?id=129123
Summary We need something like WKPageUIClient in the Obj-C API
Anders Carlsson
Reported 2014-02-20 15:34:39 PST
We need something like WKPageUIClient in the Obj-C API
Attachments
Patch (23.30 KB, patch)
2014-02-20 15:36 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2014-02-20 15:36:57 PST
WebKit Commit Bot
Comment 2 2014-02-20 15:40:10 PST
Attachment 224804 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/Cocoa/UIClient.h:52: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Cocoa/UIClient.h:53: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Cocoa/UIClient.h:54: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 3 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2014-02-20 17:44:44 PST
Note You need to log in before you can comment on or make changes to this bug.